--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "browserify -t [ babelify --presets [ react ] ] public/index.js -o build/app.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "Trading",
