--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "trading_journal",
   "version": "1.0.0",
   "description": "A web application that allow users to journal their trades.",
-  "main": "index.js",
+  "main": "index.jsx",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "browserify -t [ babelify --presets [ react ] ] public/index.js -o build/app.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "Trading",
