--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "./" }]
+    "version": 2,
+    "name": "nodejs-express",
+    "builds": [
+        { "src": "server.js", "use": "@now/node" }
+    ],
+    "routes": [
+        { "src": "/(.*)", "dest": "./" }
+    ]
 }
