--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
     "version": 2,
-    "name": "nodejs-express",
     "builds": [
-        { "src": "server.js", "use": "@now/node" }
+        { "src": "./server.js", "use": "@vercel/node" }
     ],
     "routes": [
         { "src": "/(.*)", "dest": "./" }
