--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-        { "src": "./public", "use": "@vercel/node" }
+        { "src": "./public/index.jsx", "use": "@vercel/node" }
     ],
     "routes": [
         { "src": "/(.*)", "dest": "./" }
