--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "trading_journal",
   "version": "1.0.0",
   "description": "A web application that allow users to journal their trades.",
-  "main": "index.jsx",
-  "engines": {
-    "node": "14.x"
-  },
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "concat:css": "concat -o build/dist/css/style.css -f C:/Users/panas/demos/rambo/Trading_journal/public/style.css C:/Users/panas/demos/rambo/Trading_journal/public/signInStyles.css",
+    "concat:js": "concat -o build/dist/js/scripts.jsx public/index.jsx public/signIn.jsx public/logIn.jsx public/dashboardIndex.jsx public/addTradeIndex.jsx",
+    "concat": "npm run concat:css && npm run concat:js",
+    "cssmin": "cleancss -o build/dist/css/style.min.css build/dist/css/style.css",
+    "build:css": "npm run concat:css && npm run cssmin",
+    "build:js": "npm run concat:js",
+    "build": "npm run build:css && npm run build:js"
   },
   "keywords": [
     "Trading",
@@ -21,9 +24,10 @@
     "@react-spring/parallax": "^9.5.5",
     "axios": "^1.1.3",
     "babelify": "^10.0.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "concat": "^1.0.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.7",
@@ -36,7 +40,8 @@
     "react-router-dom": "^6.4.3",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "uglify-js": "^3.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
