--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "A web application that allow users to journal their trades.",
   "main": "server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "start": "node server.js"
-=======
+    "start": "node server.js",
     "dev": "nodemon server.js"
->>>>>>> refs/remotes/origin/main
   },
   "keywords": [
     "Trading",
