--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
         {
             "src": "./index.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "*.html",
+            "use": "@vercel/static"
+        },
+        {
+            "src": "*.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
